# home-access-center-mcp

./: .env.example  .gitignore  README.md  hac.py  hac_config.example.json  mcp_server.py  pyproject.toml  requirements.txt
docs/: AGENT_CONTEXT.md
hac_client/: __init__.py  cache_manager.py  client.py  formatters.py  models.py  skills.py
hac_client/parsers/: __init__.py  leander_isd.py
